base/src/test/resources/failure/patterns/issues/issue681.aya.txt
In file $FILE:26:18 ->

  24 | 
  25 | def +-assoc : Pi (x y z : Nat) -> x + (y + z) = (x + y) + z
  26 |   | zero, y, z => idp
                         ^-^

Error: The name `idp` is not defined in the current scope

Resolving interrupted due to:
1 error(s), 0 warning(s).
What are you doing?
